--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@google-cloud/speech": "^6.1.0",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
+    "docx": "^8.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
+    "libreoffice-convert": "^1.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1"
   }
 }
